Added tab system to /members

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myauthapp",
+  "name": "klang",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "angularfire2": "^2.0.0-beta.7",
     "core-js": "^2.4.1",
     "firebase": "^3.6.5",
